0703 고도균 화면 구현 미니 프로젝트 제출 합니다.

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -13,7 +13,7 @@
         android:id="@+id/exBtn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="버튼1"/>
+        android:text="버튼"/>
 
     <Button
         android:id="@+id/exBtn2"
