0703 고도균 화면 구현 미니 프로젝트 제출 합니다.2

--- a/app/src/main/res/layout/activity_kdk1115_splash.xml
+++ b/app/src/main/res/layout/activity_kdk1115_splash.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/combi"
+            android:src="@drawable/food1"
             android:maxWidth="150dp"
             android:maxHeight="150dp"
             android:adjustViewBounds="true"
