0703 고도균 화면 구현 미니 프로젝트 제출 합니다.3

--- a/app/src/main/res/layout/activity_kdk1115_login.xml
+++ b/app/src/main/res/layout/activity_kdk1115_login.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="패스워드를 입력해주세요"/>
+        android:hint="패스워드.를 입력해주세요"/>
 
 
     <Button
