--- a/app/src/main/res/layout/activity_kdk1115_join.xml
+++ b/app/src/main/res/layout/activity_kdk1115_join.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.kdk1115_mini.Kdk1115JoinActivity">
+    tools:context=".miniProject.test0703.kdk1115_mini.kdk1115JoinActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
