--- a/app/src/main/res/layout/activity_kdk1115_main.xml
+++ b/app/src/main/res/layout/activity_kdk1115_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.kdk1115_mini.Kdk1115MainActivity">
+    tools:context=".miniProject.test0703.kdk1115_mini.kdk1115MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
