5교시, ch6 뷰 기본 알아보기, 미니실습 안내. nhj

--- a/app/src/main/res/layout/activity_kdk1115_join.xml
+++ b/app/src/main/res/layout/activity_kdk1115_join.xml
@@ -21,7 +21,7 @@
             android:ellipsize="end"/>
 
     <EditText
-        android:emain="@+id/ch06Memail"
+        android:id="@+id/ch06Memail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
