나호진확인부탁드립니다.(2)

--- a/app/src/main/res/layout/activity_nhj0918_splash.xml
+++ b/app/src/main/res/layout/activity_nhj0918_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.Nhj0918_mini.Nhj0918SplashActivity">
+    tools:context=".miniProject.test0703.nhj0918_mini.Nhj0918SplashActivity">
 
 
     <LinearLayout
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/splashpageNhj0918"/>
+            android:src="@drawable/splashpagenhj0918"/>
 
 
     </LinearLayout>
