--- a/app/src/main/res/layout/activity_nhj0918_join.xml
+++ b/app/src/main/res/layout/activity_nhj0918_join.xml
@@ -5,33 +5,35 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.Nhj0918_mini.Nhj0918MainActivity">
-
+    tools:context=".miniProject.test0703.nhj0918_mini.Nhj0918JoinActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loginpageNhj0918" />
-
-        <LinearLayout
+        <EditText
+            android:layout_marginTop="100dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:inputType="text"
+            android:hint="이메일 입력"/>
 
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="mainPage"
-            android:layout_gravity="center"/>
+            android:inputType="textPassword"
+            android:hint="패스워드 입력"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="로그인"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="회원가입"/>
 
 
     </LinearLayout>
