--- a/app/src/main/res/layout/activity_nhj0918_login.xml
+++ b/app/src/main/res/layout/activity_nhj0918_login.xml
@@ -5,9 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity">
+    tools:context=".miniProject.test0703.nhj0918_mini.Nhj0918LoginActivity">
+
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -17,25 +19,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:hint="이메일 입력"/>
+            android:hint="이메일입력"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="패스워드 입력"/>
+            android:hint="비밀번호입력"/>
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="로그인"/>
+            android:text="로그인" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="회원가입"/>
+            android:text="회원가입" />
 
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
