--- a/app/src/main/res/layout/activity_nhj0918_main.xml
+++ b/app/src/main/res/layout/activity_nhj0918_main.xml
@@ -5,39 +5,35 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0703.Nhj0918_mini.Nhj0918LoginActivity">
+    tools:context=".miniProject.test0703.nhj0918_mini.Nhj0918MainActivity">
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText
-            android:layout_marginTop="100dp"
+        <ImageView
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/loginpagenhj0918" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="이메일입력"/>
+            android:orientation="horizontal">
 
-        <EditText
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="비밀번호입력"/>
+            android:text="mainPage"
+            android:layout_gravity="center"/>
 
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="로그인" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="회원가입" />
 
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
