--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_text_color">#E91E63</color>
+    <color name="sub_text_color">#8BC34A</color>
+    <color name="sub2_text_color">#03A9F4</color>
 </resources>
