--- a/app/src/main/res/layout/activity_ch11_main_recycler_view1.xml
+++ b/app/src/main/res/layout/activity_ch11_main_recycler_view1.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0709.lsy1205_mini.Ch11MainRecyclerView1Activity">
+    tools:context=".ch11_jetpack.recyclerview.test1simple.Ch11MainRecyclerView1Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,22 +17,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!--            리사이클러뷰 넣기. -->
+<!--            리사이클러뷰 넣기. -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ch11RecyclerSample1"
                 android:layout_width="match_parent"
                 android:layout_height="600dp"
 
                 />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:text="여기는 리사이클러뷰 영역이 아닙니다."
-                android:background="@color/main_text_color"
-                style="@style/MyTextStyle"/>
 
 
             <!--            리사이클러뷰2 넣기. -->
+            <TextView
+                style="@style/MyTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@color/main_text_color"
+                android:text="여기는 리사이클러뷰 영역이 아닙니다." />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ch11RecyclerSample2"
                 android:layout_width="match_parent"
@@ -47,9 +48,23 @@
                 android:background="@color/main_text_color"
                 style="@style/MyTextStyle"/>
 
+            <!--            리사이클러뷰2 넣기. -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ch11RecyclerSample3"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="3여기는 리사이클러뷰 영역이 아닙니다.3 "
+                android:background="@color/main_text_color"
+                style="@style/MyTextStyle"/>
+
         </LinearLayout>
 
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
