--- a/app/src/main/res/layout/activity_kms0828_ch11_main_recycler_view1.xml
+++ b/app/src/main/res/layout/activity_kms0828_ch11_main_recycler_view1.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0709.lsy1205_mini.Ch11MainRecyclerView1Activity">
+    tools:context=".miniProject.test0709.kms0828_mini.kms0828Ch11MainRecyclerView1Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -46,6 +46,14 @@
                 android:text="여기는 리사이클러뷰 영역이 아닙니다.2 "
                 android:background="@color/main_text_color"
                 style="@style/MyTextStyle"/>
+
+            <!--            리사이클러뷰3 넣기. -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ch11RecyclerSample3"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+
+                />
 
         </LinearLayout>
 
