--- a/app/src/main/res/layout/activity_kms0828_ch11_main_recycler_view1.xml
+++ b/app/src/main/res/layout/activity_kms0828_ch11_main_recycler_view1.xml
@@ -47,7 +47,7 @@
                 android:background="@color/main_text_color"
                 style="@style/MyTextStyle"/>
 
-            <!--            리사이클러뷰3 넣기. -->
+            <!--            리사이클러뷰3 넣기.. -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ch11RecyclerSample3"
                 android:layout_width="match_parent"
