--- a/app/src/main/res/layout/kms0828_ch11_item_simple_recycler3.xml
+++ b/app/src/main/res/layout/kms0828_ch11_item_simple_recycler3.xml
@@ -15,7 +15,7 @@
             android:id="@+id/ch11Recycler3ItemImg"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/giants"/>
+            android:src="@drawable/giants8"/>
 
 
         <TextView
