--- a/app/src/main/res/layout/lcs0806_fragment_ch111.xml
+++ b/app/src/main/res/layout/lcs0806_fragment_ch111.xml
@@ -29,9 +29,10 @@
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="400dp"
-          android:src="@drawable/dogtired"
+          android:src="@drawable/dogtired2"
           android:adjustViewBounds="true"
           android:scaleType="centerCrop"/>
+
 
   </LinearLayout>
 
