--- a/app/src/main/res/layout/lcs0806_fragment_ch113.xml
+++ b/app/src/main/res/layout/lcs0806_fragment_ch113.xml
@@ -29,9 +29,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:src="@drawable/livemoney"
+            android:src="@drawable/livemoney2"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"/>
+
 
     </LinearLayout>
 
