--- a/app/src/main/res/layout/activity_fragment_ch11_one_msy0402.xml
+++ b/app/src/main/res/layout/activity_fragment_ch11_one_msy0402.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment">
+    tools:context=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment_msy0402">
 
     <!-- Example fragment layout with a TextView -->
     <LinearLayout
