--- a/app/src/main/res/layout/activity_ch11_two_fragment_msy0402.xml
+++ b/app/src/main/res/layout/activity_ch11_two_fragment_msy0402.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment">
+    tools:context=".miniProject.test0710_msy0402.msy0402_mini.Ch11TwoFragment_msy0402">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
