--- a/app/src/main/res/layout/activity_fragment_ch11_three_msy0402.xml
+++ b/app/src/main/res/layout/activity_fragment_ch11_three_msy0402.xml
@@ -5,16 +5,24 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_two">
-    <!-- Example fragment layout with an ImageView -->
+    tools:context=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_three_msy0402">
+    <!-- Example fragment layout with both TextView and ImageView -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
 
+        <TextView
+            android:id="@+id/textViewFragmentThree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fragment Three"
+            android:textSize="24sp"
+            android:textColor="@android:color/black"/>
+
         <ImageView
-            android:id="@+id/imageViewFragmentTwo"
+            android:id="@+id/imageViewFragmentThree"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/ic_launcher_foreground"
