0710 임채수 프래그먼트 페이지 구성 과제 재전달드립니다 재도전입니다. 제발 그만충돌나라 진짜

--- a/app/src/main/res/layout/lcs0806_fragment_ch111.xml
+++ b/app/src/main/res/layout/lcs0806_fragment_ch111.xml
@@ -14,7 +14,7 @@
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="400dp"
-          android:src="@drawable/dogtired"
+          android:src="@drawable/dogtired2"
           android:adjustViewBounds="true"
           android:scaleType="centerCrop"/>
 
@@ -25,7 +25,6 @@
           android:gravity="center"
           android:text="강아지 피곤"
           android:textSize="30sp" />
-
 
       <ImageView
           android:layout_width="match_parent"
