--- a/app/src/main/res/layout/activity_lhj0728_join.xml
+++ b/app/src/main/res/layout/activity_lhj0728_join.xml
@@ -9,6 +9,47 @@
     android:gravity="center"
     tools:context=".miniProject.test0703.lhj0728_mini.Lhj0728JoinActivity">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:cardCornerRadius="75dp"
+        app:cardElevation="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/resultUserImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/user_basic"
+            android:scaleType="centerCrop"/>
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/galleryBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="갤러리"
+            android:layout_weight="1"
+            android:textSize="30sp"/>
+
+        <Button
+            android:id="@+id/cameraBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="카메라"
+            android:layout_weight="1"
+            android:textSize="30sp"/>
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/Mid"
         android:layout_width="match_parent"
